--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -77,8 +77,9 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version-file: ".python-version"
-
+          python-version: '3.13'
+          # python-version-file: ".python-version"
+      
       - name: Install the dev dependencies of the project
         run: uv sync --only-group docs
 
