--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -42,8 +42,9 @@ jobs:
       - name: Define image tag
         id: define_img_tag
         run: |
-            IMAGE_TAG=ghcr.io/${{ github.repository_owner }}/test-docker-app
-            echo "image_tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
+          IMAGE_TAG=ghcr.io/${{ github.repository_owner }}/test-docker-app
+          IMAGE_TAG=$(echo "$IMAGE_TAG" | tr "[:upper:]" "[:lower:]")
+          echo "image_tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
 
       - name: Debug info
         run: |
