--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -27,47 +27,35 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-        with:
-          platforms: linux/amd64
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
+      # Disabilitiamo buildx e usiamo il Docker standard
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ secrets.GH_USERNAME }}
           password: ${{ secrets.GH_ACCESS_TOKEN }}
-          logout: true
 
-      - name: Define image tag
-        id: define_img_tag
+      # Verifichiamo la presenza del Dockerfile
+      - name: Check Dockerfile
         run: |
-          IMAGE_TAG=ghcr.io/${{ github.repository_owner }}/test-docker-app
-          IMAGE_TAG=$(echo "$IMAGE_TAG" | tr "[:upper:]" "[:lower:]")
-          echo "image_tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
+          if [ ! -f Dockerfile ]; then
+            echo "Error: Dockerfile not found in repository root"
+            exit 1
+          fi
+          echo "Dockerfile found"
 
-      - name: Debug info
+      # Utilizziamo i comandi Docker nativi invece di buildx
+      - name: Build Docker image
         run: |
-          echo "Using image tag: ${{ steps.define_img_tag.outputs.image_tag }}"
-          echo "Repository owner: ${{ github.repository_owner }}"
-          ls -la  # Verifica la presenza del Dockerfile
+          REPO_NAME=$(echo "${{ github.repository_owner }}/test-docker-app" | tr '[:upper:]' '[:lower:]')
+          docker build -t ghcr.io/$REPO_NAME:latest .
+          echo "Built image: ghcr.io/$REPO_NAME:latest"
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          push: true
-          platforms: linux/amd64
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          tags: ${{ steps.define_img_tag.outputs.image_tag }}:latest
-          labels: |
-            org.opencontainers.image.source=https://github.com/${{ github.repository }}
-          # timeout-minutes: 20
+      - name: Push Docker image
+        run: |
+          REPO_NAME=$(echo "${{ github.repository_owner }}/test-docker-app" | tr '[:upper:]' '[:lower:]')
+          docker push ghcr.io/$REPO_NAME:latest
+          echo "Pushed image: ghcr.io/$REPO_NAME:latest"
 
   publish_updated_docs:
     name: Publish updated documentation
@@ -88,7 +76,6 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.13'
-          # python-version-file: ".python-version"
       
       - name: Install the dev dependencies of the project
         run: uv sync --only-group docs
