--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -27,15 +27,28 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Disabilitiamo buildx e usiamo il Docker standard
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ secrets.GH_USERNAME }}
           password: ${{ secrets.GH_ACCESS_TOKEN }}
+          ecr: auto
+          logout: true
 
-      # Verifichiamo la presenza del Dockerfile
+      - name: Debug info
+        run: |
+          echo "Repository: ${{ github.repository }}"
+          echo "Owner: ${{ github.repository_owner }}"
+          echo "Token permissions available: yes" 
+
+      # Verifica la presenza del Dockerfile
       - name: Check Dockerfile
         run: |
           if [ ! -f Dockerfile ]; then
@@ -44,19 +57,24 @@ jobs:
           fi
           echo "Dockerfile found"
 
-      # Utilizziamo i comandi Docker nativi invece di buildx
-      - name: Build Docker image
+      - name: Define image tag
+        id: define_img_tag
         run: |
-          REPO_NAME=$(echo "${{ github.repository_owner }}/test-docker-app" | tr '[:upper:]' '[:lower:]')
-          docker build -t ghcr.io/$REPO_NAME:latest .
-          echo "Built image: ghcr.io/$REPO_NAME:latest"
+          IMAGE_TAG=ghcr.io/${{ github.repository_owner }}/test-docker-app
+          IMAGE_TAG=$(echo "$IMAGE_TAG" | tr "[:upper:]" "[:lower:]")
+          echo "image_tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
 
-      - name: Push Docker image
-        run: |
-          REPO_NAME=$(echo "${{ github.repository_owner }}/test-docker-app" | tr '[:upper:]' '[:lower:]')
-          docker push ghcr.io/$REPO_NAME:latest
-          echo "Pushed image: ghcr.io/$REPO_NAME:latest"
-
+      - name: Build and push multi-arch Docker image
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          platforms: linux/amd64,linux/arm64
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          tags: ${{ steps.define_img_tag.outputs.image_tag }}:latest
+          labels: |
+            org.opencontainers.image.source=https://github.com/${{ github.repository }}
+      
   publish_updated_docs:
     name: Publish updated documentation
     runs-on: ubuntu-latest
@@ -66,6 +84,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+        # Install the uv Python package manager
+        # It leverages uv's cache to make runs faster;
+        # the chache is invalidated when uv.lock changes
       - name: Install uv
         uses: astral-sh/setup-uv@v5
         with:
@@ -76,9 +97,15 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.13'
+          # python-version-file: ".python-version"
       
       - name: Install the dev dependencies of the project
         run: uv sync --only-group docs
+
+      # - name: Set up git user
+      #   run: |
+      #     git config --global user.name "GitHub Actions"
+      #     git config --global user.email "actions@github.com"
 
       - name: Build the docs
         run: uv run mkdocs build
